<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signin.SignInActivity">

    <EditText
        android:id="@+id/edt_email"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="10dp"
        android:background="@drawable/input_bg"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:autofillHints="emailAddress"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_layout"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/input_bg"
        app:helperTextTextColor="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:passwordToggleEnabled="true">

        <com.dicoding.picodiploma.storyapp.ui.customview.PasswordEditText
            android:id="@+id/edt_password"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:inputType="textPassword"
            android:maxLength="16" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signin"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/masuk"
        app:layout_constraintTop_toBottomOf="@id/edt_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ProgressBar
        android:id="@id/loading_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_signin"
        app:layout_constraintBottom_toBottomOf="@id/btn_signin"
        app:layout_constraintLeft_toLeftOf="@id/btn_signin"
        app:layout_constraintRight_toRightOf="@id/btn_signin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin">

        <TextView
            android:id="@+id/tv_signup1"
            android:alpha="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/desc_signup"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_signup2"
            android:alpha="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_horizontal"
            android:text="@string/or_sign_up"
            android:textSize="18sp"
            android:textColor="@color/teal_700"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>